<resources>
    <string name="app_name">Vacaybay</string>
    <string name="introTitle">Book your <font color="#247BA0">\n dream</font> vacation</string>
    <string name="subIntro">Lorem ipsum odor amet, consectetuer\n adipiscing elit. Cubilia sagittis rutrum\n blandit ex interdum feugiat.</string>
    <string name="placeholderTxt">Lorem ipsum odor amet, consectetuer adipiscing elit. Cubilia sagittis rutrum blandit ex interdum feugiat. Lorem ipsum odor amet, consectetuer adipiscing elit. Cubilia sagittis rutrum blandit ex interdum feugiat.</string>
    <string name="back_button">Back</string>
    <string name="promotions">Promotions</string>
    <string name="promotion_1">10% Off for Four Seasons Villa</string>
    <string name="promotion_1_desc">Enjoy 10% off during your next stay at Four Seasons Villas.</string>
    <string name="see_details">See Details</string>
    <string name="close">Close</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="email_title">Email</string>
    <string name="name_title">Full Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_title">Phone</string>
    <string name="enter_your_phone">Enter your phone number</string>
    <string name="password_title">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="login">Login</string>
    <string name="login_register_button">Don\'t have an account yet? Register here.</string>
</resources>