<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/register_title"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:hint="@string/enter_your_email"/>

    <TextView
        android:id="@+id/name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:hint="@string/enter_your_name"/>

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/phone_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_your_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="12dp" />

    <TextView
        android:id="@+id/pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/pwd_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:hint="@string/enter_your_password"/>

    <TextView
        android:id="@+id/confirm_pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/confirm_pwd_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:hint="@string/confirm_your_password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="24dp"
        android:padding="12dp"/>

</LinearLayout>