<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_title"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_title"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/pwd_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:hint="@string/enter_your_password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="24dp"
        android:padding="12dp"/>

    <Button
        android:id="@+id/go_to_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_button"/>

</LinearLayout>